--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -17,8 +17,14 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="aX7-mJ-8jk">
                                 <rect key="frame" x="150" y="242" width="20" height="20"/>
                             </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Simple Testcases Demo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qtq-fz-hE7">
+                                <rect key="frame" x="68" y="94" width="184" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6FC-VD-eBT">
-                                <rect key="frame" x="118" y="94" width="86" height="44"/>
+                                <rect key="frame" x="118" y="144" width="86" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="API: Like">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,7 +38,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Doq-u3-Klc">
-                                <rect key="frame" x="58" y="145" width="205" height="44"/>
+                                <rect key="frame" x="58" y="195" width="205" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="API: Async Player (4 reqs)">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -46,7 +52,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b02-Qd-gFK">
-                                <rect key="frame" x="66" y="196" width="190" height="44"/>
+                                <rect key="frame" x="66" y="246" width="190" height="44"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="API: Async Like (4 reqs)">
                                     <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,12 +69,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="1oq-sd-55l"/>
+                            <constraint firstItem="Qtq-fz-hE7" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="user" id="1uM-Zz-dpo"/>
                             <constraint firstItem="Doq-u3-Klc" firstAttribute="top" secondItem="6FC-VD-eBT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="FpW-ZQ-UqH"/>
-                            <constraint firstItem="6FC-VD-eBT" firstAttribute="top" secondItem="3" secondAttribute="top" constant="94" id="Ur7-ES-jc3"/>
-                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="default" id="W9n-tK-g4Q"/>
-                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="ZJE-Be-oba"/>
+                            <constraint firstItem="Qtq-fz-hE7" firstAttribute="top" secondItem="3" secondAttribute="top" constant="94" id="IA8-xk-Ply"/>
+                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="user" id="W9n-tK-g4Q"/>
+                            <constraint firstItem="6FC-VD-eBT" firstAttribute="top" secondItem="3" secondAttribute="top" constant="144" id="WQG-Bd-MvV"/>
+                            <constraint firstItem="aX7-mJ-8jk" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="user" id="ZJE-Be-oba"/>
                             <constraint firstItem="b02-Qd-gFK" firstAttribute="top" secondItem="Doq-u3-Klc" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="k1A-Tn-OgY"/>
                             <constraint firstItem="Doq-u3-Klc" firstAttribute="centerX" secondItem="6FC-VD-eBT" secondAttribute="centerX" type="default" id="sWC-mu-H30"/>
+                            <constraint firstAttribute="centerX" secondItem="Qtq-fz-hE7" secondAttribute="centerX" type="user" id="tcP-75-MIi"/>
                             <constraint firstItem="b02-Qd-gFK" firstAttribute="centerX" secondItem="Doq-u3-Klc" secondAttribute="centerX" type="default" id="yze-SB-Udg"/>
                         </constraints>
                     </view>
@@ -80,6 +89,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="337" y="-44"/>
+        </scene>
+        <!--Badge Demo Screen-->
+        <scene sceneID="UCj-YA-WwD">
+            <objects>
+                <viewController title="Badge Demo Screen" id="8LJ-C0-dgp" customClass="badgeDemoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ypf-eB-q2q">
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="veb-ts-Nxw">
+                                <rect key="frame" x="96" y="163" width="129" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Do 'like' action">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doLikeAction:" destination="8LJ-C0-dgp" eventType="touchUpInside" id="N2v-JU-EKv"/>
+                                </connections>
+                            </button>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7x7-jj-V1j">
+                                <rect key="frame" x="37" y="214" width="246" height="174"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="174" id="IeX-Bo-ggx"/>
+                                    <constraint firstAttribute="width" constant="246" id="rkc-Xn-zAj"/>
+                                </constraints>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="9tu-l3-1np">
+                                <rect key="frame" x="150" y="242" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Badge Demo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pBk-Nl-Vl4">
+                                <rect key="frame" x="110" y="90" width="101" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7x7-jj-V1j" firstAttribute="top" secondItem="veb-ts-Nxw" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="9ib-u2-bYX"/>
+                            <constraint firstItem="pBk-Nl-Vl4" firstAttribute="centerX" secondItem="veb-ts-Nxw" secondAttribute="centerX" type="default" id="DrG-Yf-ZC4"/>
+                            <constraint firstItem="pBk-Nl-Vl4" firstAttribute="top" secondItem="Ypf-eB-q2q" secondAttribute="top" constant="90" id="JQw-Dg-ayp"/>
+                            <constraint firstItem="pBk-Nl-Vl4" firstAttribute="centerX" secondItem="Ypf-eB-q2q" secondAttribute="centerX" type="default" id="TdG-1o-PXA"/>
+                            <constraint firstItem="veb-ts-Nxw" firstAttribute="centerX" secondItem="9tu-l3-1np" secondAttribute="centerX" type="default" id="e2c-Oc-Ooj"/>
+                            <constraint firstItem="7x7-jj-V1j" firstAttribute="centerX" secondItem="9tu-l3-1np" secondAttribute="centerX" type="default" id="jv1-kJ-wm8"/>
+                            <constraint firstItem="9tu-l3-1np" firstAttribute="centerY" secondItem="Ypf-eB-q2q" secondAttribute="centerY" type="default" id="nBU-60-SA8"/>
+                            <constraint firstItem="veb-ts-Nxw" firstAttribute="top" secondItem="Ypf-eB-q2q" secondAttribute="top" constant="163" id="uUP-98-x68"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="VBq-Uk-O6J"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="9tu-l3-1np" id="ba7-na-DjS"/>
+                        <outlet property="badgeImage" destination="7x7-jj-V1j" id="4qj-cj-uNb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ysd-Io-ZcL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="337" y="655"/>
         </scene>
         <!--Auth & Login UI Nav Controller-->
         <scene sceneID="yI6-sn-d2j">
@@ -176,6 +246,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="8LJ-C0-dgp" kind="push" identifier="showBadgeDemoScreen" id="EDc-YX-6a6"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sjo-rb-xgI">
                                 <rect key="frame" x="64" y="102" width="192" height="22"/>
