--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -120,24 +120,163 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A7K-nq-J8T">
+                                <rect key="frame" x="150" y="242" width="20" height="20"/>
+                            </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quiz Demo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vxT-yg-FW8">
                                 <rect key="frame" x="118" y="94" width="85" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading Question" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N6h-2R-Zdc">
+                                <rect key="frame" x="105" y="270" width="111" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="U3w-Uh-Zkn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="vxT-yg-FW8" firstAttribute="centerX" secondItem="tht-gO-gER" secondAttribute="centerX" type="default" id="ISb-2u-ogv"/>
-                            <constraint firstItem="vxT-yg-FW8" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="94" id="gd7-zH-uJR"/>
+                            <constraint firstItem="N6h-2R-Zdc" firstAttribute="centerX" secondItem="A7K-nq-J8T" secondAttribute="centerX" type="default" id="4Cp-PR-xHu"/>
+                            <constraint firstItem="vxT-yg-FW8" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="94" id="7gz-sc-TeT"/>
+                            <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="tht-gO-gER" secondAttribute="centerX" type="default" id="Hyq-4s-NVS"/>
+                            <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="vxT-yg-FW8" secondAttribute="centerX" type="default" id="gaV-Bz-Zmz"/>
+                            <constraint firstItem="N6h-2R-Zdc" firstAttribute="top" secondItem="A7K-nq-J8T" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="icR-Oy-lKd"/>
+                            <constraint firstItem="A7K-nq-J8T" firstAttribute="centerY" secondItem="tht-gO-gER" secondAttribute="centerY" type="default" id="pZf-D0-b5S"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DCW-tB-Jac"/>
+                    <connections>
+                        <segue destination="upe-3R-lMd" kind="modal" identifier="showQuizScreen" id="KNA-Gq-Jkg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KP9-hI-nfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-78" y="742"/>
+            <point key="canvasLocation" x="-1500" y="698"/>
+        </scene>
+        <!--Quiz Screen-->
+        <scene sceneID="prC-1m-gOT">
+            <objects>
+                <viewController title="Quiz Screen" id="upe-3R-lMd" customClass="quizScreenViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EH8-yy-uaV">
+                        <rect key="frame" x="0.0" y="64" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":quizName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VMF-ma-mmP">
+                                <rect key="frame" x="120" y="94" width="82" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="brh-BR-Q2w"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H8C-Au-prY">
+                                <rect key="frame" x="41" y="131" width="240" height="133"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="133" id="KOI-g7-ra4"/>
+                                    <constraint firstAttribute="width" constant="240" id="eCn-wW-Q2W"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":quizDescription" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cVp-y3-Hgr">
+                                <rect key="frame" x="98" y="272" width="124" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpN-0z-Kx9">
+                                <rect key="frame" x="98" y="326" width="126" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Take This Quiz">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="mNc-65-1rH" kind="modal" identifier="showQuestionScreen" id="i6V-lN-UN9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ieo-lG-fhO">
+                                <rect key="frame" x="228" y="497" width="76" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="RIb-5c-lV3"/>
+                                    <constraint firstAttribute="width" constant="76" id="eQG-bF-kuc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Reload Quiz">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="ajk-5j-TJz" kind="modal" id="zf7-0S-MRb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="H8C-Au-prY" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="131" id="2gN-W8-ycN"/>
+                            <constraint firstAttribute="bottom" secondItem="vpN-0z-Kx9" secondAttribute="bottom" constant="179" id="9fj-c0-Tcz"/>
+                            <constraint firstItem="VMF-ma-mmP" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="94" id="Cr4-Of-6bE"/>
+                            <constraint firstItem="vpN-0z-Kx9" firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" type="user" id="R1l-5l-zbq"/>
+                            <constraint firstAttribute="centerX" secondItem="VMF-ma-mmP" secondAttribute="centerX" constant="-1" type="user" id="UCk-fy-0BX"/>
+                            <constraint firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" constant="-1" type="user" id="Ubf-wa-hjb"/>
+                            <constraint firstAttribute="trailing" secondItem="ieo-lG-fhO" secondAttribute="trailing" constant="16" id="Vhj-7U-7z2"/>
+                            <constraint firstAttribute="bottom" secondItem="ieo-lG-fhO" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="d7E-LS-hL9"/>
+                            <constraint firstItem="vpN-0z-Kx9" firstAttribute="leading" secondItem="cVp-y3-Hgr" secondAttribute="leading" type="user" id="ekT-on-UWN"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="centerX" secondItem="EH8-yy-uaV" secondAttribute="centerX" type="user" id="iVu-mU-tK7"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="top" secondItem="H8C-Au-prY" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="rcc-AL-OCx"/>
+                            <constraint firstItem="VMF-ma-mmP" firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" type="user" id="zbg-Ae-HIE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="qVh-Lw-o2g"/>
+                    <connections>
+                        <outlet property="quizDescriptionLabel" destination="cVp-y3-Hgr" id="BVr-jK-zns"/>
+                        <outlet property="quizImageView" destination="H8C-Au-prY" id="Mfd-1U-uEg"/>
+                        <outlet property="quizNameLabel" destination="VMF-ma-mmP" id="w9g-ON-lOK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AyY-P5-vFM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1130" y="698"/>
+        </scene>
+        <!--Question Screen-->
+        <scene sceneID="DVu-92-ffe">
+            <objects>
+                <viewController title="Question Screen" id="mNc-65-1rH" customClass="questionScreenViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MG9-Ju-fNJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="7ee-Sh-HNh" kind="modal" identifier="showQuizResult" id="Wu8-sR-8fa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kh5-Tb-Dlf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-772" y="698"/>
+        </scene>
+        <!--Quiz Result Screen-->
+        <scene sceneID="ntN-Fi-0wO">
+            <objects>
+                <viewController title="Quiz Result Screen" id="7ee-Sh-HNh" customClass="quizResultScreenViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cr7-Zg-8sS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZiE-dn-hKo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-412" y="698"/>
         </scene>
         <!--Badge Demo Screen-->
         <scene sceneID="UCj-YA-WwD">
@@ -352,4 +491,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="zf7-0S-MRb"/>
+    </inferredMetricsTieBreakers>
 </document>
